久違地更新

--- a/鉅亨網基金清單(20210408維護).ipynb
+++ b/鉅亨網基金清單(20210408維護).ipynb
@@ -30,23 +30,23 @@
     "\n",
     "urls = []\n",
     "\n",
-    "for page in range(1,6):\n",
+    "for page in range(1, 6):\n",
     "    # 全球市場科技類\n",
     "    url = f'https://fund.cnyes.com/search/?categoryAbbr=C46&investmentArea=A3&order=inceptionDate&page={page}&sort=asc'\n",
     "    driver.get(url)\n",
     "    driver.implicitly_wait(8)\n",
-    "    \n",
-    "    for i in range(1,23):  # 每頁23列\n",
+    "\n",
+    "    for i in range(1, 23):  # 每頁23列\n",
     "        try:\n",
     "            href = driver.find_element_by_css_selector(f'#target_tbody > tr:nth-child({i}) > td._1OU0Y._2rwNH > a').get_attribute('href')\n",
     "            urls.append(href.split('/report/')[0])\n",
-    "            \n",
+    "\n",
     "        except:\n",
     "            continue\n",
-    "            \n",
+    "\n",
     "    time.sleep(1+random.random())\n",
-    "    \n",
-    "        \n",
+    "\n",
+    "\n",
     "driver.close()\n",
     "\n",
     "# 存入csv\n",
